Improved tests and resolved an issue with the handling of json files